<resources>
    <string name="app_name">Happening@UBI</string>
    <string name="a_minha_conta">MY ACCOUNT</string>
    <string name="conectar_pelo_facebook">Conect to Facebook</string>
    <string name="conectar_pelo_google">Conect to Google</string>
    <string name="mudar_foto_de_perfil">Change profile picture</string>
    <string name="idioma">Language</string>
    <string name="reportar_um_problema">Report a problem</string>
    <string name="reportar_problema">Report a problem</string>
    <string name="assunto">Subject</string>
    <string name="descri_o">Description</string>
    <string name="cancelar">Cancel</string>
    <string name="enviar">Send</string>
    <string name="nome_do_evento">Name of the Event</string>
    <string name="v_o_ao_evento">Going to the Event</string>
    <string name="interessados">Interested</string>
    <string name="descri_o_do_evento">Description of event</string>
    <string name="editar_descri_o">Edit Description</string>
    <string name="nova_descri_o">New Description</string>
    <string name="editar">Edit</string>
    <string name="log_out">Log Out</string>
    <string name="feedback">FEEDBACK</string>
    <string name="mudar_linguagem">Change Language</string>
    <string name="portugu_s">Portuguese</string>
    <string name="ingl_s">English</string>
    <string name="novo_evento">New Event</string>
    <string name="eventos_criados">Events Created</string>
    <string name="vou">Going</string>
    <string name="interessado">Interested</string>
    <string name="cria_agora_a_tua_conta_e_mant_m_te_atualizado">Create Now Your Account And Stay Updated</string>
    <string name="s_novo_aqui_regista_te_agora">New here? Create an account right now.</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Event Location</string>
    <string name="add_video">Add Video</string>
    <string name="add_photo">Add Photo</string>
    <string name="see_what_s_happening_in_ubi_right_now">See what\'s \'\'Happening\'\' in UBI right now.</string>
    <string name="ou">OR</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pic">Change Profile Photo</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="changePass">Change Password</string>
    <string name="pick_time">Define hour</string>
    <string name="deleteAcc">Delete Account</string>
    <string name="changeEmail">Change Email</string>
    <string name="add_pic">Add a profile picture</string>
    <string name="confirm">Confirm</string>
</resources>